--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <body>
 
 
-    <nav class="navbar navbar-expand-lg bg-body-tertiary position-sticky top-0">
-        <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg position-sticky top-0">
+        <div class="container">
             <a class="navbar-brand" href="#">Navbar</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
