added more navbar links

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="pl">
 
 <head>
     <meta charset="utf-8">
@@ -26,9 +26,13 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="ms-auto navbar-nav">
-                    <a class="nav-link active" href="#">Home</a>
-                    <a class="nav-link" href="#">Features</a>
-                    <a class="nav-link" href="#">Pricing</a>
+                    <a class="nav-link active" href="#home">Home</a>
+                    <a class="nav-link" href="#aboutus">o nas</a>
+                    <a class="nav-link" href="#portfolio">portfolio</a>
+                    <a class="nav-link" href="#prices">ceny</a>
+                    <a class="nav-link" href="#team">zespół</a>
+                    <a class="nav-link" href="#achievements">osiągnięcia</a>
+                    <a class="nav-link" href="#contact">kontakt</a>
                 </div>
             </div>
         </div>
