--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
             </div>
         </div>
     </nav>
-    <div style="height: 200vh"></div>
+    <header class="hero-img">
+<div class="hero-text"><h1>witajcie w progamers</h1><p>W miejscu, gdzie gry tworzymy z pasją</p></div>
+<div class="hero-shadow"></div>
+    </header>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
