--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <nav class="navbar navbar-expand-lg position-sticky top-0">
         <div class="container">
-            <a class="navbar-brand" href="#"><i class="fa-solid fa-headset"></i> progamers</a>
+            <a class="navbar-brand" href="#"><i class="fa-solid fa-headset"></i> pro<span class="nav-logo-color">gamers</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fa-solid fa-bars"></i>
