--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <nav class="navbar navbar-expand-lg position-sticky top-0">
         <div class="container">
-            <a class="navbar-brand" href="#"><i class="fa-solid fa-headset"></i> pro<span class="nav-logo-color">gamers</span></a>
+            <a class="navbar-brand" href="#"><i class="fa-solid fa-headset"></i> pro<span class="logo-color">gamers</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fa-solid fa-bars"></i>
@@ -38,7 +38,7 @@
         </div>
     </nav>
     <header class="hero-img">
-<div class="hero-text"><h1>witajcie w progamers</h1><p>W miejscu, gdzie gry tworzymy z pasją</p></div>
+<div class="hero-text"><h1>witajcie w pro<span class="logo-color">gamers</span></h1><p>W miejscu, gdzie gry tworzymy z pasją</p></div>
 <div class="hero-shadow"></div>
     </header>
 
