--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
 <body>
 
 
-    <nav class="navbar navbar-expand-lg position-sticky top-0">
+    <nav class="navbar navbar-expand-lg position-fixed top-0 w-100">
         <div class="container">
-            <a class="navbar-brand" href="#"><i class="fa-solid fa-headset"></i> pro<span class="blue-text">gamers</span></a>
+            <a class="navbar-brand" href="#"><i class="fa-solid fa-headset"></i> pro<span
+                    class="blue-text">gamers</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fa-solid fa-bars"></i>
@@ -38,8 +39,11 @@
         </div>
     </nav>
     <header class="hero-img">
-<div class="hero-text"><h1>witajcie w pro<span class="blue-text">gamers</span></h1><p>W miejscu, gdzie gry tworzymy z pasją</p></div>
-<div class="hero-shadow"></div>
+        <div class="hero-text">
+            <h1>witajcie w pro<span class="blue-text">gamers</span></h1>
+            <p>W miejscu, gdzie gry tworzymy z pasją</p>
+        </div>
+        <div class="hero-shadow"></div>
     </header>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
