--- a/index.html
+++ b/index.html
@@ -38,13 +38,24 @@
             </div>
         </div>
     </nav>
-    <header class="hero-img">
+    <header class="hero-img" id="home">
         <div class="hero-text">
             <h1>witajcie w pro<span class="blue-text">gamers</span></h1>
             <p>W miejscu, gdzie gry tworzymy z pasją</p>
         </div>
         <div class="hero-shadow"></div>
     </header>
+
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
+    <section id="aboutus" style="height: 30vh; background-color: #ddd;"></section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
