--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
         <div class="hero-text">
             <h1>witajcie w pro<span class="blue-text">gamers</span></h1>
             <p>W miejscu, gdzie gry tworzymy z pasją</p>
+            <a href="#aboutus" class="btn btn-outline-light mt-2 text-uppercase">poznaj nas</a>
+
+            <i class="fa-solid fa-chevron-down"></i>
+
         </div>
         <div class="hero-shadow"></div>
     </header>
