--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
             <p>W miejscu, gdzie gry tworzymy z pasją</p>
             <a href="#aboutus" class="btn btn-outline-light mt-2 text-uppercase">poznaj nas</a>
 
-            <i class="fa-solid fa-chevron-down"></i>
-
         </div>
         <div class="hero-shadow"></div>
+        <a href="#aboutus">
+            <i class="fa-solid fa-chevron-down"></i></a>
     </header>
 
     <br>
