made the aboutus section responsive

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
     </nav>
     <header class="hero-img" id="home">
-        <div class="hero-text">
+        <div class="hero-text text-center p-2">
             <h1>witajcie w pro<span class="blue-text">gamers</span></h1>
             <p>W miejscu, gdzie gry tworzymy z pasją</p>
             <a href="#aboutus" class="btn btn-outline-light mt-2 text-uppercase">poznaj nas</a>
