--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
 
-    <nav class="navbar navbar-expand-lg position-fixed top-0 w-100">
+    <nav class="navbar navbar-expand-lg position-fixed top-0 w-100 py-3">
         <div class="container">
             <a class="navbar-brand" href="#"><i class="fa-solid fa-headset"></i> pro<span
                     class="blue-text">gamers</span></a>
