--- a/index.html
+++ b/index.html
@@ -50,21 +50,14 @@
             <i class="fa-solid fa-chevron-down"></i></a>
     </header>
 
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-
-    <section id="aboutus" style="height: 30vh; background-color: #ddd;"></section>
+    <main>
+        <section id="aboutus" class="aboutus py-5 bg-light"></section>
+    </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-        <script src="./js/script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
