--- a/index.html
+++ b/index.html
@@ -51,7 +51,24 @@
     </header>
 
     <main>
-        <section id="aboutus" class="aboutus py-5 bg-light"></section>
+        <section id="aboutus" class="aboutus py-5 bg-light">
+
+            <div class="container">
+                <h2 class="section-title">o nas</h2>
+                <div class="underline"></div>
+                <div class="row">
+                    <div class="col-sm-6 col-md-4">
+                        <p><i class="fa-solid fa-mobile-screen"></i></p>
+                        <div class="aboutus-card-title">mobile gaming</div>
+                        <div class="aboutus-card-text">Tworzymy gry na urządzenia mobilne!</div>
+                    </div>
+                </div>
+
+
+
+            </div>
+
+        </section>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
