added mobile gaming card

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <h2 class="section-title">o nas</h2>
                 <div class="underline"></div>
                 <div class="row">
-                    <div class="col-sm-6 col-md-4">
+                    <div class="text-center col-sm-6 col-md-4">
                         <p><i class="fa-solid fa-mobile-screen"></i></p>
                         <div class="aboutus-card-title">mobile gaming</div>
                         <div class="aboutus-card-text">Tworzymy gry na urządzenia mobilne!</div>
