added other cards

--- a/index.html
+++ b/index.html
@@ -57,10 +57,42 @@
                 <h2 class="section-title">o nas</h2>
                 <div class="underline"></div>
                 <div class="row">
+
                     <div class="text-center col-sm-6 col-md-4">
                         <p><i class="fa-solid fa-mobile-screen"></i></p>
-                        <div class="aboutus-card-title">mobile gaming</div>
+                        <div class="aboutus-card-title mb-1">mobile gaming</div>
                         <div class="aboutus-card-text">Tworzymy gry na urządzenia mobilne!</div>
+                    </div>
+
+                    <div class="text-center col-sm-6 col-md-4">
+                        <p><i class="fa-solid fa-desktop"></i></p>
+                        <div class="aboutus-card-title mb-1">desktop gaming</div>
+                        <div class="aboutus-card-text">Lorem ipsum dolor sit amet.</div>
+                    </div>
+
+                    <div class="text-center col-sm-6 col-md-4">
+                        <p><i class="fa-solid fa-file-code"></i></p>
+                        <div class="aboutus-card-title mb-1">najwyższe standardy</div>
+                        <div class="aboutus-card-text">Lorem ipsum dolor sit amet consectetur.</div>
+                    </div>
+
+                    <div class="text-center col-sm-6 col-md-4">
+                        <p><i class="fa-solid fa-paw"></i></p>
+                        <div class="aboutus-card-title mb-1">kochamy zwierzęta</div>
+                        <div class="aboutus-card-text">Lorem ipsum dolor sit amet consectetur.</div>
+                    </div>
+
+                    <div class="text-center col-sm-6 col-md-4">
+                        <p><i class="fa-solid fa-burger"></i></p>
+                        <div class="aboutus-card-title mb-1">kochamy jedzenie</div>
+                        <div class="aboutus-card-text">Lorem ipsum dolor sit amet consectetur.</div>
+                    </div>
+
+                    <div class="text-center col-sm-6 col-md-4">
+                        <p><i class="fa-solid fa-champagne-glasses"></i></p>
+                        <div class="aboutus-card-title mb-1">świetne relacje</div>
+                        <div class="aboutus-card-text">Lorem ipsum dolor sit amet consectetur.</div>
+
                     </div>
                 </div>
 
