--- a/index.html
+++ b/index.html
@@ -101,6 +101,35 @@
             </div>
 
         </section>
+
+        <section id="portfolio" class="portfolio py-5 bg-light">
+
+            <div class="container">
+                <h2 class="section-title">tworzymy gry na platformy</h2>
+                <div class="underline"></div>
+                <div class="row">
+
+                    <div class="portfolio-hover text-center col-sm-6 col-md-4">
+                        <p><i class="fa-solid fa-mobile-screen"></i></p>
+                        <div class="portfolio-card-title mb-1">mobile gaming</div>
+                        <div class="portfolio-card-text">Tworzymy gry na urządzenia mobilne!</div>
+                    </div>
+
+                    <div class="portfolio-hover text-center col-sm-6 col-md-4">
+                        <p><i class="fa-solid fa-mobile-screen"></i></p>
+                        <div class="portfolio-card-title mb-1">mobile gaming</div>
+                        <div class="portfolio-card-text">Tworzymy gry na urządzenia mobilne!</div>
+                    </div>
+
+                    <div class="portfolio-hover text-center col-sm-6 col-md-4">
+                        <p><i class="fa-solid fa-mobile-screen"></i></p>
+                        <div class="portfolio-card-title mb-1">mobile gaming</div>
+                        <div class="portfolio-card-text">Tworzymy gry na urządzenia mobilne!</div>
+                    </div>
+                    
+            <div class="hero-shadow"></div>
+        </section>
+
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
