--- a/index.html
+++ b/index.html
@@ -98,26 +98,26 @@
         <section class="aboutus-hero py-5">
             <div class="aboutus-shadow"></div>
 
-            <div class="container">
+            <div class="container py-5">
                 <h2 class="section-title">tworzymy gry na platformy</h2>
                 <div class="underline"></div>
 
                 <div class="row">
 
-                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
-                        <p class="aboutus-card-title mb-1">świetne relacje</p>
-                        <p><i class="fas fa-glass-cheers"></i></p>
-                        <p class="aboutus-card-text">Zachowujemy świetne relacje z naszymi klientami!</p>
+                    <div class="col-lg-4 text-center aboutus-hero-item">
+                        <p class="aboutus-hero-title mb-1">PC</p>
+                        <p><i class="fa-brands fa-steam"></i></p>
+                        <p class="aboutus-hero-text">Lorem ipsum dolor sit amet consectetur.</p>
                     </div>
-                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
-                        <p class="aboutus-card-title mb-1">świetne relacje</p>
-                        <p><i class="fas fa-glass-cheers"></i></p>
-                        <p class="aboutus-card-text">Zachowujemy świetne relacje z naszymi klientami!</p>
+                    <div class="col-lg-4 text-center aboutus-hero-item">
+                        <p class="aboutus-hero-title mb-1">PlayStation</p>
+                        <p><i class="fa-brands fa-playstation"></i></p>
+                        <p class="aboutus-hero-text">Lorem ipsum dolor sit amet consectetur.</p>
                     </div>
-                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
-                        <p class="aboutus-card-title mb-1">świetne relacje</p>
-                        <p><i class="fas fa-glass-cheers"></i></p>
-                        <p class="aboutus-card-text">Zachowujemy świetne relacje z naszymi klientami!</p>
+                    <div class="col-lg-4 text-center aboutus-hero-item">
+                        <p class="aboutus-hero-title mb-1">Xbox</p>
+                        <p><i class="fa-brands fa-xbox"></i></p>
+                        <p class="aboutus-hero-text">Lorem ipsum dolor sit amet consectetur.</p>
                     </div>
 
                 </div>
