--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <h2 class="section-title">portfolio</h2>
             <div class="underline"></div>
             <div class="container">
-                <div id="carouselExampleCaptions" class="carousel slide">
+                <div id="carouselExampleCaptions" class="carousel slide d-none d-lg-block">
                     <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
                             class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -138,16 +138,16 @@
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="..." class="d-block w-100" alt="...">
+                            <img src="./img/gaming-2259191_1280.jpg" class="d-block w-100" alt="okładka gry Pro Football">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5>First slide label</h5>
+                                <h5>Pro Football</h5>
                                 <p>Some representative placeholder content for the first slide.</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="..." class="d-block w-100" alt="...">
+                            <img src="./img/car-race-438467_1280.jpg" class="d-block w-100" alt="okładka gry Pro Racing">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5>Second slide label</h5>
+                                <h5>Pro Racing</h5>
                                 <p>Some representative placeholder content for the second slide.</p>
                             </div>
                         </div>
