--- a/index.html
+++ b/index.html
@@ -129,6 +129,28 @@
             <h2 class="section-title">portfolio</h2>
             <div class="underline"></div>
             <div class="container">
+
+                <div class="card-group">
+                    <div class="card">
+                        <img src="./img/gaming-2259191_1280.jpg" class="card-img-top" alt="okładka gry Pro Football">
+                        <div class="card-body">
+                            <h5 class="card-title">Pro Football</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                            <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="./img/car-race-438467_1280.jpg" class="card-img-top" alt="okładka gry Pro Racing">
+                        <div class="card-body">
+                            <h5 class="card-title">Pro Racing</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                            <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                        </div>
+                    </div>
+                </div>
+
                 <div id="carouselExampleCaptions" class="carousel slide d-none d-lg-block">
                     <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
@@ -138,14 +160,16 @@
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="./img/gaming-2259191_1280.jpg" class="d-block w-100" alt="okładka gry Pro Football">
+                            <img src="./img/gaming-2259191_1280.jpg" class="d-block w-100"
+                                alt="okładka gry Pro Football">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5>Pro Football</h5>
                                 <p>Some representative placeholder content for the first slide.</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="./img/car-race-438467_1280.jpg" class="d-block w-100" alt="okładka gry Pro Racing">
+                            <img src="./img/car-race-438467_1280.jpg" class="d-block w-100"
+                                alt="okładka gry Pro Racing">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5>Pro Racing</h5>
                                 <p>Some representative placeholder content for the second slide.</p>
