--- a/index.html
+++ b/index.html
@@ -130,14 +130,13 @@
             <div class="underline"></div>
             <div class="container">
 
-                <div class="card-group">
-                    <div class="card">
+                <div class="card-group d-lg-none">
+                    <div class="card me-3">
                         <img src="./img/gaming-2259191_1280.jpg" class="card-img-top" alt="okładka gry Pro Football">
                         <div class="card-body">
                             <h5 class="card-title">Pro Football</h5>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                                 additional content. This content is a little bit longer.</p>
-                            <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
                         </div>
                     </div>
                     <div class="card">
@@ -146,7 +145,7 @@
                             <h5 class="card-title">Pro Racing</h5>
                             <p class="card-text">This card has supporting text below as a natural lead-in to additional
                                 content.</p>
-                            <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                          
                         </div>
                     </div>
                 </div>
