added prices section

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             </div>
         </section>
 
-        <section id="portfolio" class="portfolio bg-light py-5">
+        <section id="portfolio" class="portfolio py-5">
             <h2 class="section-title">portfolio</h2>
             <div class="underline"></div>
             <div class="container">
@@ -145,7 +145,7 @@
                             <h5 class="card-title">Pro Racing</h5>
                             <p class="card-text">This card has supporting text below as a natural lead-in to additional
                                 content.</p>
-                          
+
                         </div>
                     </div>
                 </div>
@@ -187,6 +187,49 @@
                     </button>
                 </div>
             </div>
+        </section>
+
+        <section id="prices" class="prices py-5 bg-light">
+            <div class="container py-5">
+                <h2 class="section-title">ceny</h2>
+                <div class="underline"></div>
+                <div class="row">
+
+                    <div class="col-lg-4 text-center">mobile
+                        <div class="underline-small"></div>
+                        <p>Urządzenia:<i class="fa-solid fa-mobile-screen"></i></p>
+                        <p>Długość gry: Krótka</p>
+                        <p>Grafika: Średnia</p>
+                        <p>Online: Brak</p>
+                        <p>499 zł</p>
+                        <p><button type="button" class="btn btn-secondary">Zamawiam</button>
+                        </p>
+                    </div>
+
+                    <div class="col-lg-4 text-center">mobile
+                        <div class="underline-small"></div>
+                        <p>Urządzenia:<i class="fa-solid fa-mobile-screen"></i></p>
+                        <p>Długość gry: Krótka</p>
+                        <p>Grafika: Średnia</p>
+                        <p>Online: Brak</p>
+                        <p>499 zł</p>
+                        <p><button type="button" class="btn btn-secondary">Zamawiam</button>
+                        </p>
+                    </div>
+
+                    <div class="col-lg-4 text-center">mobile
+                        <div class="underline-small"></div>
+                        <p>Urządzenia:<i class="fa-solid fa-mobile-screen"></i></p>
+                        <p>Długość gry: Krótka</p>
+                        <p>Grafika: Średnia</p>
+                        <p>Online: Brak</p>
+                        <p>499 zł</p>
+                        <p><button type="button" class="btn btn-secondary">Zamawiam</button>
+                        </p>
+                    </div>
+                </div>
+                <p>Skorzystaj z jednego z trzech głównych pakietów lub skontaktuj się z nami i ustal warunki indywidualnie!</p>
+                </div>
         </section>
 
     </main>
