added few lines of text

--- a/index.html
+++ b/index.html
@@ -228,7 +228,8 @@
                         </p>
                     </div>
                 </div>
-                <p>Skorzystaj z jednego z trzech głównych pakietów lub skontaktuj się z nami i ustal warunki indywidualnie!</p>
+                <p>Skorzystaj z jednego z trzech głównych pakietów lub <span><a href="">skontaktuj się z nami</a></span> i ustal warunki indywidualnie!</p>
+                <p>Pakiet <span class="fw-bold">FULL PACK</span> zawiera wersję gry na urządzenia mobilne, PC oraz konsole.</p>
                 </div>
         </section>
 
